add MWB and themes as git submodules

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   ignore = "/bin/false"
   base = ".massivewikibuilder"
   publish = "output"
-  command = "./mwb.py -c mwb.yaml -w .. -o output -t massive-wiki-themes/alto"
+  command = "massivewikibuilder/mwb.py -c mwb.yaml -w .. -o output -t this-wiki-themes/alto"
 
 [build.environment]
   PYTHON_VERSION = "3.8"
