--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
   ignore = "/bin/false"
-  base = ".massivewikibuilder"
-  publish = "output"
-  command = "massivewikibuilder/mwb.py -c mwb.yaml -w .. -o output -t this-wiki-themes/alto"
+  base = ".massivewikibuilder/massivewikibuilder"
+  publish = "../output"
+  command = "./mwb.py -c ../mwb.yaml -w ../.. -o ../output -t ../this-wiki-themes/basso"
 
 [build.environment]
   PYTHON_VERSION = "3.8"
